--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       type="image/x-icon"
     />
 
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
 
     <title>Weather-App</title>
   </head>
