--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       type="image/x-icon"
     />
 
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
 
     <title>Weather-App</title>
   </head>
@@ -24,19 +24,19 @@
         <p>Invalid city name, please input real city</p>
       </div>
       <div class="weather">
-        <img src="/img/cloudy.png" class="weather_icon" alt="weather" />
+        <img src="img/cloudy.png" class="weather_icon" alt="weather" />
         <h1 class="temp">22°C</h1>
         <h2 class="city_name">New York</h2>
         <div class="details">
           <div class="col">
-            <img src="/img/humidity-icon.png" alt="" />
+            <img src="img/humidity-icon.png" alt="" />
             <div>
               <p class="humidity">50%</p>
               <p>Humidity</p>
             </div>
           </div>
           <div class="col">
-            <img src="/img/wind-icon.png" alt="" />
+            <img src="img/wind-icon.png" alt="" />
             <div>
               <p class="wind">15 km/h</p>
               <p>Wind speed</p>
@@ -46,6 +46,6 @@
       </div>
     </div>
 
-    <script src="/js/app.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
