--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="shortcut icon"
-      href="/img/Weather_favicon.png"
+      href="img/Weather_favicon.png"
       type="image/x-icon"
     />
+    <link rel="stylesheet" href="../../../resources/stylesheet.min.css" />
 
     <link rel="stylesheet" href="css/style.css" />
 
