--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
         <p>Invalid city name, please input real city</p>
       </div>
       <div class="weather">
-        <img src="img/cloudy.png" class="weather_icon" alt="weather" />
+        <img
+          src="dkcodec.github.io/Weather-App/img/cloudy.png"
+          class="weather_icon"
+          alt="weather"
+        />
         <h1 class="temp">22°C</h1>
         <h2 class="city_name">New York</h2>
         <div class="details">
