--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <img
           src="dkcodec.github.io/Weather-App/img/cloudy.png"
           class="weather_icon"
-          alt="cloudy"
+          alt="weather"
         />
         <h1 class="temp">22°C</h1>
         <h2 class="city_name">New York</h2>
